realice un cambio en el index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1>Hello, Juan 1, Juan 2, Johan, Joaquin!</h1>
+    <img src="https://solucion-web.info/img/logo-negro.svg" width="500">
 
     <!-- Optional JavaScript; choose one of the two! -->
 
